--- a/vercel.json
+++ b/vercel.json
@@ -17,7 +17,7 @@
   ],
   "headers": [
     {
-      "source": "/api/(.*)",
+      "source": "/users/(.*)",
       "headers": [
         { "key": "Access-Control-Allow-Credentials", "value": "true" },
         { "key": "Access-Control-Allow-Origin", "value": "*" },
