--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "NODE_ENV=development node server.js",
     "start": "NODE_ENV=production node server.js",
-    "watch": "json-server db.json --port=8000"
+    "watch": "json-server data.json --port=8000"
   },
   "keywords": [],
   "author": "",
